// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptaRugbyFixtures should render correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa giUBsz"
  >
    <div
      class="sc-htpNat sc-ifAKCX iuBsRb"
    />
    <div
      class="sc-bwzfXH kVYHKf"
    >
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;

exports[`OptaRugbyFixtures should render correctly 2`] = `
<DocumentFragment>
  <div
    class="sc-bdVaJa hGXeaj"
  >
    <div
      class="sc-htpNat sc-ifAKCX iuBsRb"
    >
      <div>
        Widget
      </div>
    </div>
  </div>
</DocumentFragment>
`;
